# glasshouse

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  SCOPE.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  substrate-canary.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_curve_payload_period.py  0002_projections.py  0003_projection_actor.py  0004_position_hour_hypertable.py
docs/: drafts-morpholog-audit-contract-issue.md  morpholog-integration-contract.md
scripts/: generate_commit_models.py
src/glasshouse/: __init__.py  cli.py  config.py  logging.py  seed.py  verify.py
src/glasshouse/api/: __init__.py  app.py  deps.py  health.py  queries.py  schemas.py
src/glasshouse/api/routers/: __init__.py  explain.py  reads.py
src/glasshouse/commit/: __init__.py  adapter.py  bases.py  client.py  envelope.py  generated.py  glasshouse.morph  manifest.json  morpholog_views.sql  views.py
src/glasshouse/commit/morpholog_client/: __init__.py  adapter.py  envelopes.py  models.py  values.py
src/glasshouse/compute/: __init__.py  curves.py  marking.py  store.py  valuation.py
src/glasshouse/imports/: __init__.py  curves.py  report.py  trades.py
src/glasshouse/packs/: __init__.py
src/glasshouse/packs/power_fixed_price/: __init__.py
src/glasshouse/projections/: __init__.py  projector.py  runner.py  tables.py
src/glasshouse/web/: __init__.py  routes.py  templating.py
src/glasshouse/web/static/css/: badge.css  base.css  forms.css  layout.css  table.css  tokens.css
src/glasshouse/web/templates/: _macros.html  base.html  blotter.html  error.html  orgs.html  overview.html  positions.html
src/glasshouse/web/templates/partials/: blotter_table.html
tests/: conftest.py  support.py  test_dst.py  test_logging.py  test_seed_integration.py  test_seed_pure.py  test_smoke.py  test_verify_integration.py  test_verify_units.py
tests/api/: test_explain_integration.py  test_explain_pure.py  test_reads_integration.py  test_reads_pure.py  test_readyz_integration.py
tests/commit/: envelopes.py  test_adapter.py  test_adapter_integration.py  test_client.py  test_envelope.py  test_tamper_evidence_integration.py  test_views_integration.py
tests/compute/: test_curves.py  test_marking_integration.py  test_valuation.py
tests/imports/: test_cli.py  test_curves.py  test_imports_integration.py  test_preview.py  test_trades.py
tests/projections/: test_folds.py  test_hypertable_integration.py  test_projector_integration.py  test_runner.py
tests/web/: __init__.py  test_templates_pure.py  test_ui_integration.py  test_ui_pure.py
