[project]
name = "glasshouse"
version = "0.1.0a0"
description = "The open ETRM core for European power. Trades, curves, positions, P&L and audit, without the black box."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Jordan Dimov", email = "jdimov@a115.co.uk" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.14",
    "structlog>=24.4",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-randomly>=3.16",
    "hypothesis>=6.120",
    "httpx>=0.28",
    "ruff>=0.15.17",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glasshouse"]

[tool.ruff]
line-length = 100
target-version = "py313"
# The generated client is committed byte-exact (the drift check is
# regenerate-and-diff against the binary), so our formatters and
# linters must never touch it.
extend-exclude = ["src/glasshouse/commit/morpholog_client"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff's own
    "A",    # builtins shadowing
    "ARG",  # unused arguments
    "DTZ",  # naive datetimes - law 9 as a lint rule
    "ERA",  # commented-out code
    "FURB", # modernisation
    "G",    # logging format
    "ISC",  # implicit string concatenation
    "N",    # naming
    "PERF", # performance
    "PT",   # pytest style
    "PTH",  # pathlib over os.path
    "RET",  # return discipline
    "SLF",  # private-member access
    "T20",  # stray prints
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]
ignore = [
    # House doctrine: money and quantities are Decimal FROM STRINGS,
    # uniformly - even where an int literal would be exact. FURB157's
    # Decimal("10") -> Decimal(10) fix is correct but off-doctrine.
    "FURB157",
]

[tool.ruff.lint.per-file-ignores]
# Fixture-dependency parameters and stub signatures are idiomatic in
# tests; "unused argument" is usually the point.
"tests/**" = ["ARG"]
# print IS the CLI's interface.
"src/glasshouse/cli.py" = ["T20"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# Generated, byte-pinned, tested upstream against the binary's own
# goldens; our strictness applies to our code.
[[tool.mypy.overrides]]
module = "glasshouse.commit.morpholog_client.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Upstream noise: starlette's testclient warns about its own httpx
    # dependency when fastapi imports it; the migration (httpx -> httpx2)
    # is starlette/fastapi's to make, not ours.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

# Coverage is opt-in locally (`uv run pytest --cov`) and enforced in
# CI's integration job, where the full suite runs. The generated client
# is omitted: byte-pinned, tested upstream against the binary's own
# goldens; measuring it would count surfaces we deliberately do not use.
[tool.coverage.run]
branch = true
source = ["glasshouse"]
omit = ["*/glasshouse/commit/morpholog_client/*"]

[tool.coverage.report]
precision = 1
show_missing = true
